internal/octogo/testdata/15_if_statements.ogo
// COMPILE

func testIf() {
    var flag bool = true
    var count int = 1

    if flag {
        count = 2
    }

    if count == 2 {
        flag = false
    } else {
        flag = true
    }

    // ERROR "non-bool used as if condition|mismatched types"
    if count { 
        count = 3
    }

    // ERROR "non-bool used as if condition|mismatched types"
    if "true" { 
        count = 4
    }
}
